// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inferDynamicRange 1`] = `
Object {
  "initial": 0.4,
  "max": 0.8,
  "min": 0.1,
  "step": 0.05,
  "steps": 15,
}
`;

exports[`inferDynamicRange 2`] = `
Object {
  "initial": 1,
  "max": 2,
  "min": 0.2,
  "step": 0.1,
  "steps": 19,
}
`;

exports[`inferDynamicRange 3`] = `
Object {
  "initial": 1,
  "max": 2.1,
  "min": 0.30000000000000004,
  "step": 0.1,
  "steps": 19,
}
`;

exports[`inferDynamicRange 4`] = `
Object {
  "initial": 10,
  "max": 20,
  "min": 3,
  "step": 1,
  "steps": 18,
}
`;

exports[`inferDynamicRange 5`] = `
Object {
  "initial": 100,
  "max": 200,
  "min": 30,
  "step": 10,
  "steps": 18,
}
`;

exports[`inferDynamicRange 6`] = `
Object {
  "initial": 100,
  "max": 200,
  "min": 20,
  "step": 10,
  "steps": 19,
}
`;

exports[`projectRangeIndex 1`] = `0.2`;
